bk_ida/gccida/c3/dump_edge_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_edge_info/src/cfg.c:1049:8: error: use of undeclared identifier 'dump_edge_info_bitnames'
fputs( dump_edge_info_bitnames[i], file); 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_edge_info/src/obj/cfg.o] Error 1
